--- a/ios-restaurant-app/Base.lproj/Main.storyboard
+++ b/ios-restaurant-app/Base.lproj/Main.storyboard
@@ -17,20 +17,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FTH-IE-q1E">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="I8i-C2-De2">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="BRX-YY-vs4">
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="LoG-QG-Za4">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="WJO-ma-hKx">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="YgF-1b-Ldi">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="iWD-VJ-BwP">
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="4Xs-ad-gcU">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
@@ -41,10 +41,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="FTH-IE-q1E" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="7mR-oK-RlG"/>
-                            <constraint firstItem="FTH-IE-q1E" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fwZ-Mp-FvR"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="FTH-IE-q1E" secondAttribute="bottom" id="pWc-Kv-kL5"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FTH-IE-q1E" secondAttribute="trailing" id="y80-Vj-R1y"/>
+                            <constraint firstAttribute="bottom" secondItem="I8i-C2-De2" secondAttribute="bottom" id="1fY-hr-Ay8"/>
+                            <constraint firstItem="I8i-C2-De2" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="9E6-E6-QSw"/>
+                            <constraint firstAttribute="trailing" secondItem="I8i-C2-De2" secondAttribute="trailing" id="ikm-PR-VtB"/>
+                            <constraint firstItem="I8i-C2-De2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mwd-N8-2W2"/>
                         </constraints>
                     </view>
                 </viewController>
